# ProxDM

./: .gitignore  README.md  environment.yml  eval.py  pyproject.toml  train.py
configs/celeba_hq_vae/: default.py  prox_hybrid.py  score.py
configs/cifar10/: base.py  prox_hybrid.py  prox_hybrid_subset.py  prox_hybrid_subset_noheur.py  score.py  score_subset.py
configs/mnist/: base.py  prox_backward.py  prox_hybrid.py  score.py
scripts/: download_celeba_hq_256.sh  download_datasets.py  download_models_and_fid_stats.sh  prepare_fid_stats.py
scripts/low_dim_experiment/: plot.ipynb  sample.py
src/prox_diff/: core.py  sde.py
src/prox_diff/utils/: misc.py
src/prox_diff/utils/img_exp/: README.md  engine_eval.py  engine_train.py  fid_core.py  loss_lr_schedule.py  t_lamb_sampling.py  t_sampling.py  utils.py  vae.py
src/prox_diff/utils/img_exp/dataloaders/: celeba_hq_loader.py  cifar10_loader.py  loader_factory.py  mnist_loader.py  utils.py
src/prox_diff/utils/img_exp/networks/: README.md  sinusoidal_embedding.py
src/prox_diff/utils/img_exp/networks/ddpm_unet/: README.md  model.py  model_prox.py
src/prox_diff/utils/low_dim/: README.md  gmm_prox_scipy.py  gmm_score_torch.py  wasserstein.py
