[project]
name = "prox-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.3.1",
    "accelerate>=1.8.1",
    "einops>=0.8.1",
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "ml-collections>=1.1.0",
    "omegaconf>=2.3.0",
    "pandas>=2.3.0",
    "pillow>=11.3.0",
    "pot>=0.9.5",
    "pytorch-fid>=0.3.0",
    "scienceplots>=2.1.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
